@@ -51,6 +51,22 @@
           <sel>usingCache:</sel>
           <arg type="BOOL">shouldUseCache</arg>
           <desc>
+	    Loads the resource data for the specified URL.
+	    <p>
+	      If <em>shouldUseCache</em> is <code>YES</code> then an attempt
+	      will be made to locate a cached NSURLHandle to provide the
+	      resource data, otherwise a new handle will be created and
+	      cached.
+	    </p>
+	    <p>
+	      If the handle does not have the data available, it will be
+	      asked to load the data in the background by calling its
+	      loadInBackground  method.
+	    </p>
+	    <p>
+	      The specified client (if non-nil) will be set up to recieve
+	      notifications of the progress fo the background load process.
+	    </p>
           </desc>
         </method>
 
